--- a/references/bibliography.bib
+++ b/references/bibliography.bib
@@ -1,12 +1,55 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Miguel angel Luque Fernandez at 2016-10-19 16:39:07 +0100 
+%% Created for Miguel angel Luque Fernandez at 2016-10-20 10:50:04 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{neu2005,
+	Author = {Neugebauer, Romain and van der Laan, Mark},
+	Date-Added = {2016-10-20 09:49:31 +0000},
+	Date-Modified = {2016-10-20 09:50:01 +0000},
+	Journal = {Journal of Statistical Planning and Inference},
+	Number = {1},
+	Pages = {405--426},
+	Publisher = {Elsevier},
+	Title = {Why prefer double robust estimators in causal inference?},
+	Volume = {129},
+	Year = {2005}}
+
+@article{robins2000,
+	Author = {Robins, James M and Hernan, Miguel Angel and Brumback, Babette},
+	Date-Added = {2016-10-20 09:42:19 +0000},
+	Date-Modified = {2016-10-20 09:42:33 +0000},
+	Journal = {Epidemiology},
+	Pages = {550--560},
+	Publisher = {JSTOR},
+	Title = {Marginal structural models and causal inference in epidemiology},
+	Year = {2000}}
+
+@article{bang2005,
+	Author = {Bang, Heejung and Robins, James M},
+	Date-Added = {2016-10-20 09:41:18 +0000},
+	Date-Modified = {2016-10-20 09:42:41 +0000},
+	Journal = {Biometrics},
+	Number = {4},
+	Pages = {962--973},
+	Publisher = {Wiley Online Library},
+	Title = {Doubly robust estimation in missing data and causal inference models},
+	Volume = {61},
+	Year = {2005}}
+
+@article{rubin2011,
+	Author = {Rubin, Donald B},
+	Date-Added = {2016-10-20 09:28:13 +0000},
+	Date-Modified = {2016-10-20 09:28:32 +0000},
+	Journal = {Journal of the American Statistical Association},
+	Publisher = {Taylor \&amp; Francis},
+	Title = {Causal inference using potential outcomes},
+	Year = {2011}}
 
 @article{robins1986,
 	Author = {Greenland, Sander and Robins, James M},
